--- a/src/index.css
+++ b/src/index.css
@@ -1,107 +1,131 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 @font-face {
-    font-family: "Dana";
-    src: url("./assets/Font/Dana/DanaFaNum-Regular.woff2");
+  font-family: "Dana";
+  src: url("./assets/Font/Dana/DanaFaNum-Regular.woff2");
 }
 
 @font-face {
-    font-family: "DanaBold";
-    src: url("./assets/Font/Dana/Dana-Bold.ttf");
+  font-family: "DanaBold";
+  src: url("./assets/Font/Dana/Dana-Bold.ttf");
 }
 
 @font-face {
-    font-family: "Rokh";
-    src: url("./assets/Font/Rokh/RokhFaNum-Medium.woff2");
+  font-family: "Rokh";
+  src: url("./assets/Font/Rokh/RokhFaNum-Medium.woff2");
 }
 
 @font-face {
-    font-family: "RokhBold";
-    src: url("./assets/Font/Rokh/RokhFaNum-Bold.woff2");
+  font-family: "RokhBold";
+  src: url("./assets/Font/Rokh/RokhFaNum-Bold.woff2");
 }
 
 .Rokh {
-    font-family: "Rokh";
-    font-weight: 600;
+  font-family: "Rokh";
+  font-weight: 600;
 }
 
 .RokhBold {
-    font-family: "RokhBold";
+  font-family: "RokhBold";
 }
 
 .DanaBold {
-    font-family: "DanaBold";
-    font-weight: 600;
+  font-family: "DanaBold";
+  font-weight: 600;
 }
 
 body {
-    font-family: "Dana";
+  font-family: "Dana";
 }
 
 .ant-drawer-close {
-    position: absolute !important;
-    left: 0 !important;
+  position: absolute !important;
+  left: 0 !important;
 }
 
 .ant-drawer-body {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 html.dark body {
-    @apply bg-zinc-700
+  @apply bg-zinc-700;
 }
 
 a {
-    color: #1f2124 !important;
+  color: #1f2124 !important;
 }
 
 .ant-drawer-content-wrapper {
-    width: 316px !important;
+  width: 316px !important;
 }
 
 input:focus {
-    outline: none !important;
-    border: none !important;
-    box-shadow: none !important;
+  outline: none !important;
+  border: none !important;
+  box-shadow: none !important;
 }
 
 .ant-drawer-header {
-    border: none !important;
+  border: none !important;
 }
 
 .deco {
-    position: relative;
+  position: relative;
 }
 
 .deco::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: green;
-    transform: translateY(-50%);
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: green;
+  transform: translateY(-50%);
 }
 
-.blackBg {
-    width: 100%;
-    background: #1b1b1d;
-    position: absolute;
-    top: 5045px;
-    z-index: -1
+.range-slider__thumb {
+  background-color: #087c54 !important; /* تغییر رنگ دستگیره */
+  width: 12px !important; /* عرض دایره */
+  height: 12px !important; /* ارتفاع دایره */
+  border-radius: 50% !important; /* گرد کردن دایره */
+}
+
+.range-slider__track {
+  height: 4px !important; /* نازک کردن خط */
+  background-color: #ccc !important; /* رنگ پیش‌زمینه خط */
+}
+
+.range-slider__track--active {
+  background-color: #087c54 !important; /* رنگ بخش فعال */
+}
+
+.range-slider__range {
+  background-color: #087c54 !important; /* رنگ بخش پس زمینه */
+  height: 5px !important;
+}
+
+.range-slider {
+  height: 5px !important;
 }
 
 .back-image {
-    background-image: url("./assets/Images/footer-bg-min.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url("./assets/Images/footer-bg-min.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
+
+.active {
+  color: #059669 !important;
+  font-weight: bold;
+}
+
 
 @tailwind base;
 @tailwind components;
